<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00F06292"
            android:padding="12dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textAlert"
                android:layout_marginTop="19dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/no"
                android:textColor="#212121" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/noButton"
                android:layout_alignParentRight="true"
                android:background="#F06292"
                android:text="@string/yes"
                android:textColor="#3E2723" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>